# edr_sample

./: Cargo.toml  README.md
config/: 1.json  providers.json
src/: main.rs
src/edr/: event.rs  io.rs  mod.rs  parser.rs  process.rs  quic_client.rs
