[package]
name = "edr"
version = "0.1.0"
edition = "2021"
description = "EDR Windows client application using QUIC"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
ferrisetw = { version = "1.2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
windows = { version = "0.58.0", features = ["Win32_System_Diagnostics_Etw"] }
widestring = "1.1.0"
quinn = "0.11.5"
rmp-serde = "1.3.0"
tokio = { version = "1.40.0", features = ["full"] }
